[metadata]
name = arya-xai
description = Full stack ML Observability with AryaXAI
long_description = file: readme.md
long_description_content_type = text/markdown
keywords = arya-xai, ML observability
license = MIT
project_urls =
    Documentation = https://xai.arya.ai/docs/introduction
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = arya_xai
packages = find:
python_requires = >=3.0
install_requires = 
    pydantic=2.4.2

[options.packages.find]
where = arya_xai

[options.entry_points]
console_scripts =
    gha_python_packaging_demo = gha_python_packaging_demo.app:entry_point

[options.package_data]
* = *.md, *.txt