[metadata]
name = aryaxai
description = Full stack ML Observability with AryaXAI
long_description = file: readme.md
long_description_content_type = text/markdown
keywords = aryaxai, ML observability
license = MIT
project_urls =
    Documentation = https://xai.arya.ai/docs/introduction
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = aryaxai
packages = find:
python_requires = >=3.0
install_requires = 
    pydantic ==2.0
    pyjwt ==2.8.0
    python-dotenv ==1.0.0
    requests ==2.31.0
    pandas ==2.1.1

[options.packages.find]
where = aryaxai

[options.package_data]
* = *.md, *.txt